add: comments to code and update README file
